# mainRcCarBoard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F407VGTx_FLASH.ld  rcMainBoard.code-workspace  requirements.txt  run.sh  run_cmake.sh  stm32f4discovery.cfg  toolchain.cmake
.github/workflows/: build.yml  cmake.yml
Board/Src/: main.c
app/: CMakeLists.txt  Makefile  app_main.c  app_main.h  board.c  board.h  cmake_install.cmake  gps_handler.c  gps_handler.h
app/BleBoardHandler/: ble_board_handler.c  ble_board_handler.h  ble_board_message_handler.c  ble_board_message_handler.h  message_handler.c  message_id.h  message_parser.c
app/Control/: car.c  car.h  car_control.c  car_control.h  car_interface.c  car_state.c  pwm.c
app/Device/I2c/: i2c_device.h  i2c_nrf52.c  i2c_nrf52.h  i2c_stm32_hal.c
app/Device/Serial/: serial_device.h  serial_nrf52.c  serial_nrf52.h  serial_stm32_hal.c  serial_stm32_hal.h  serial_stm32_hal_rtos.c  serial_stm32_hal_rtos.h
app/DistanceSensor/: distance_sensor.c
app/GPS/: gps_handler.c
app/IMU/: ak8963.c  ak8963.h  imu_handler.c  mpu9250.h
app/LinearBuffer/: linear_buffer.c
app/Log/: ble_log.c  ble_log.h  log.c  log.h  rtt_log.c  rtt_log.h  usb_log.c  usb_log.h
app/Observer/: madgwick_filter.c  observer.c  observer.h
app/Protobuf/Messages/: cmds.pb  cmds.pb.c  cmds.pb.h  cmds.proto  compile.sh  state.pb  state.pb.c  state.pb.h  state.proto  telemetry.pb  telemetry.pb.c  telemetry.pb.h  telemetry.proto
app/RingBuffer/: ring_buffer.c  ring_buffer.h
app/src/: app_main.c
board/: CMakeLists.txt  Makefile  STM32F407VGTx_FLASH.ld  cmake_install.cmake
board/Inc/: FreeRTOSConfig.h  i2c.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
board/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c
hardware/: next_rev_changes.md
hardware/Logo.pretty/: logo.kicad_mod
hardware/rc_control_board/: FSOS8700CQ_PKG.kicad_mod  FXOS8700CQ.lib  fp-info-cache  fp-lib-table  lm3940.lib  rc_car_control.lib  rc_control_board  rc_control_board-cache.lib  rc_control_board.kicad_pcb  rc_control_board.net  rc_control_board.pro  rc_control_board.sch  sym-lib-table
hardware/ul_FXOS8700CQR1/KiCAD/2020-10-20_13-45-56/: 2020-10-20_13-45-56.lib
hardware/ul_FXOS8700CQR1/KiCAD/2020-10-20_13-45-56/footprints.pretty/: FXOS8700CQR1.kicad_mod
src/: CMakeLists.txt  app_main.c  app_sign.py  board.h  memory_map.ld  private.pem  public.pem  test.ld
src/BleBoardHandler/: message_parser.h
src/Control/: car_interface.h  car_state.h
src/Device/I2c/: i2c_stm32_hal.c  i2c_stm32_hal.h
src/Device/Serial/: serial_device.h
src/GPS/: gps_handler.h
src/IMU/: imu_handler.h  mpu9250.c
src/Log/: log.c
src/Observer/: observer.c  observer.h
src/Protobuf/: CMakeLists.txt
src/Protobuf/Messages/: cmds.pb  cmds.pb.h  compile.sh  state.pb.h  telemetry.pb.c  telemetry.pb.h
src/app/: CMakeLists.txt  app.ld  app_main.c  app_main.h  board.c  board.h  fw_header.h  main.c  startup_stm32f405xx.S  startup_stm32f407xx.S
src/app/BleBoardHandler/: ble_board_message_handler.h  message_id.h  message_parser.c
src/app/Control/: car.c  car.h  car_control.c  car_interface.c  car_interface.h  pwm.c  pwm.h
src/app/Device/: device.h
src/app/DistanceSensor/: distance_sensor.h
src/app/IMU/: fxos8700.c  fxos8700.h
src/app/LinearBuffer/: linear_buffer.h
src/app/Log/: log.c  log.h
src/app/Observer/: madgwick_filter.h
src/app/Protobuf/: CMakeLists.txt
src/app/Protobuf/Messages/: telemetry.proto
src/app/RingBuffer/: ring_buffer.c  ring_buffer.h
src/app/app_drivers/i2c/: app_i2c.c  app_i2c.h
src/app/app_drivers/led/: led.c  led.h
src/app/app_drivers/uart/: app_uart.c  app_uart.h
src/app/board/: CMakeLists.txt  startup_stm32f407xx.S
src/app/board/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_dma.c
src/app/board/Inc/: FreeRTOSConfig.h  gpio.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm_main.h  tim.h
src/app/board/Src/: dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c
src/app/error_def/: error_def.h
src/app/fault/: fault.c  fault.h  hard_fault.s
src/app/log/: log.c  log.h
src/app/nav_board_handler/: message_id.h  message_parser.c  message_parser.h  nav_board_handler.c  nav_board_handler.h  nav_board_message_handler.c  nav_board_message_handler.h
src/app/nav_board_handler/test/: cmds_pb2.py  nav_board_sim.py  nav_board_sim_cmds.py  nav_board_sim_gui.py  state_pb2.py  telemetry_pb2.py
src/board/Inc/: FreeRTOSConfig.h  dma.h  i2c.h  spi.h  usart.h  usbd_conf.h
src/board/Src/: dma.c  stm32f4xx_hal_msp.c  usbd_conf.c
src/bootloader/: CMakeLists.txt  app_loader.c  bootloader.ld  bootloader_err.h  bootloader_main.c  bootloader_uart.c  bootloader_uart.h  error_def.h  led.c  main.c  reset.c  startup_stm32f407xx.S
src/bootloader/board/: CMakeLists.txt  startup_stm32f407xx.S
src/bootloader/board/Inc/: main.h
src/bootloader/board/Src/: gpio.c  stm32f4xx_it.c  usart.c
src/bootloader/include/: app_loader.h  board.h  bootloader_main.h  bootloader_uart.h  led.h  reset.h
src/bootloader/tinycrypt/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/: fw_header.h
test/: CMakeLists.txt  ring_buffer_test.cpp
